k8s/domains/documents/components/api/infra/base/documents-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: documents-api
spec:
  selector:
    matchLabels:
      app: documents-api
  replicas: 3
  template:
    metadata:
      labels:
        app: documents-api
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: documents-api
          image: ghcr.io/mstaicu/documents-api
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2
