k8s/domains/documents/components/api/infra/base/documents-api-srv.yaml
apiVersion: v1
kind: Service

metadata:
  name: documents-api-srv
spec:
  selector:
    app: documents-api
  ports:
    - name: documents-api
      port: 3000
      targetPort: 3000
